--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -33,6 +33,11 @@ body {
   padding-left: 5px;
 }
 
+.cal > div {
+  padding-bottom: 10px;
+  padding-left: 5px;
+}
+
 .cal {
   background: $orange;
 }
