custom headers for Todo lists

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -42,7 +42,7 @@ a:link, a:visited, a:hover, a:active {
   overflow-wrap: break-word;
 }
 
-.greet > div > .todo {
+.overdue {
   background: $red;
   overflow-wrap: break-word;
 }
